# fastbkrrt

./: CMakeLists.txt  README.md  package.xml  sst_star_planner_plugin.xml
config/: rrt_star_params.yaml
include/: collision_detector.hpp  param_trajectory_generator.hpp  random_double_generator.hpp  sst_star.hpp  sst_star_planner.hpp  sstnode.hpp
src/: collision_detector.cpp  param_trajectory_generator.cpp  random_double_generator.cpp  sst_star.cpp  sst_star_planner.cpp  sstnode.cpp
test/: sst_star.test
test/src/: test_sst_star.cpp
